--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -3,12 +3,16 @@
     ViewBag.Title = "Alterar Cliente";
 }
 @section scripts{
-<script>
+    <script>
         var urlPost = '@Url.Action("Alterar", "Cliente", new { area = "" })';
         var obj = @Html.Raw(Json.Encode(Model));
-        var urlRetorno = '@Url.Action("Index", "Cliente", new { area = "" })';
-</script>
+    var urlRetorno = '@Url.Action("Index", "Cliente", new { area = "" })';
+                var urlPostBeneficiario = '@Url.Action("Validar", "Beneficiario", new { area = "" })';
+
+    </script>
+
     @Scripts.Render("~/bundles/altClientes")
+    @Scripts.Render("~/bundles/utils")
     @Scripts.Render("~/bundles/utils")
 }
 <h2>@Html.Raw(ViewBag.Title)</h2>
