--- a/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
@@ -5,6 +5,7 @@
 @section scripts{
     <script>
         var urlPost = '@Url.Action("Incluir", "Cliente", new { area = "" })';
+                var urlPostBeneficiario = '@Url.Action("Validar", "Beneficiario", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/clientes")
     @Scripts.Render("~/bundles/utils")
