--- a/FI.WebAtividadeEntrevista/Views/Cliente/BeneficiariosPopup.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/BeneficiariosPopup.cshtml
@@ -4,7 +4,7 @@
 
 }
 
-<input type="hidden" name="QuantidadeBeneficiarios" id="QuantidadeBeneficiarios" value="" />
+<input type="hidden" name="QuantidadeBeneficiarios" id="QuantidadeBeneficiarios" value="0" />
 <div class="modal-dialog" id="meupopup">
     <div class="modal-content">
         <div class="modal-header">
