--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <form id="formCadastro" method="post">
-    <input type="hidden" name="ConteudoPopup" id="ConteudoPopup" />
+    <input type="hidden" name="ConteudoPopup" id="ConteudoPopup" value="0" />
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
