--- a/FI.WebAtividadeEntrevista/Views/Cliente/BeneficiariosPopup.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/BeneficiariosPopup.cshtml
@@ -68,6 +68,8 @@
         <div class="modal-footer">
             <button class="btn btn-default" data-dismiss="modal">Fechar</button>
         </div>
+        <div>
+        </div>
     </div>
 </div>
 
